hospital-app/hospital-gateway/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hospital-gateway
  namespace: hospital-system
spec:
  gatewayClassName: envoy
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: medicenter.local
    allowedRoutes:
      namespaces:
        from: Same
  - name: http-wildcard
    protocol: HTTP
    port: 80
    hostname: "*.medicenter.local"
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    protocol: HTTPS
    port: 443
    hostname: medicenter.local
    tls:
      mode: Terminate
      certificateRefs:
      - name: medicenter-app-tls
        namespace: hospital-system
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-wildcard
    protocol: HTTPS
    port: 443
    hostname: "*.medicenter.local"
    tls:
      mode: Terminate
      certificateRefs:
      - name: medicenter-app-tls
        namespace: hospital-system
    allowedRoutes:
      namespaces:
        from: Same
